# electricdreams

./: .gitignore  .gitpod.yml  CONTRIBUTING.rst  LICENSE  README.md  README.poetry.txt  TODO  mkdocs.yml  nightride.m3u8  pyproject.toml  tox.ini
api/: openapi.json  openapi.yaml
api/client/: chat.py  paint.py  schema.py
config/: electric.env.template
docs/: index.md  modules.md
notebooks/: electricdreams-api.ipynb  electricdreams-colab-tools.ipynb  electricdreams-colab.ipynb  electricdreams-ipython.ipynb
src/electricdreams/: __init__.py  __main__.py  adventure.py  api.py  chatter.py  cli.py  config.py  conversation.py  hasher.py  notebook.py  painter.py
src/electricdreams-api/: api.py
src/electricdreams-cli/: cli.py
src/electricdreams/clients/: adventure.py  api.py  cli.py
tests/: test_cli.py
